crates/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests/snapshots/header_parsing_tests__error_empty_input.snap
---
source: rust/crates/talkbank-tree-sitter-parser/src/parser/chat_file_parser/header_dispatch/tests.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: TierValidationError,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    line: None,
                    column: None,
                },
                context: Some(
                    ErrorContext {
                        source_text: "",
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        expected: [],
                        found: "header",
                        line_offset: None,
                    },
                ),
                labels: [],
                message: "Header node found outside input range (likely from wrapper)",
                suggestion: None,
                help_url: Some(
                    "https://talkbank.org/errors/E600",
                ),
            },
        ],
    },
)
