crates/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests/snapshots/header_parsing_tests__header_no_tab_after_colon.snap
---
source: rust/crates/talkbank-tree-sitter-parser/src/parser/chat_file_parser/header_dispatch/tests.rs
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: TierValidationError,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 0,
                        end: 14,
                    },
                    line: None,
                    column: None,
                },
                context: Some(
                    ErrorContext {
                        source_text: "@Languages:eng",
                        span: Span {
                            start: 0,
                            end: 14,
                        },
                        expected: [],
                        found: "header",
                        line_offset: None,
                    },
                ),
                labels: [],
                message: "Header node found outside input range (likely from wrapper)",
                suggestion: None,
                help_url: Some(
                    "https://talkbank.org/errors/E600",
                ),
            },
        ],
    },
)
